# key

./: .gitignore  CLAUDE.md  CONTINUE.txt  Cargo.toml  README.md  REPORT.md  ci.sh  release.sh  test.sh
.github/workflows/: ci.yml  release.yml
release/: README.md
spec/: 0001-bootstrap.txt  0002-cr-setup.txt  0003-cr-better-key-id-during-creation.txt  0004-security-review.txt  0005-rules.txt  0006-rules-creation-clarification.txt  0007-ai-generated-amendments.txt  0007-controls-and-cli-changes.txt  0008-who-tests-the-test-test-tester.txt  0009-pseudo-files.txt  0010-guide-edsl.txt  0011-guide-tighter-terse.txt  0012-natural-feature-ids.txt  0013-edsl-emit-project-and-override-clarity.txt  0014-safe-exec-kernel.txt  0015-interaction-coroutine-and-project-adt.txt  0016-os-effects-and-project-only.txt  0017-env-redaction-and-os-effects.txt  NEXT.txt
src/: cli.rs  effects.rs  hash.rs  interaction.rs  interactive.rs  lib.rs  main.rs  mutation.rs  project.rs  ssh.rs  state.rs
src/commands/: activate.rs  audit.rs  key.rs  mod.rs  project_edit.rs  rules.rs  setup.rs  status.rs  user.rs
src/effects/: mod.rs  os.rs
src/guide_edsl/: coverage.rs  emit_project.rs  feature_bearing.rs  features.rs  filter.rs  materialize.rs  mod.rs  nodes.rs  text.rs  tree.rs
src/rules/: ast.rs  evaluate.rs  fixture.rs  generate.rs  interactive.rs  mod.rs  parse.rs  predicates.rs  (+7 more)
tests/: emit_project_release.rs  haiku_cache.json  integration.rs  no_direct_env.rs  no_direct_exec.rs  no_direct_fs.rs  project_edit_e2e.rs  project_round_trip.rs  pseudo_files_integ.rs  redaction_integ.rs
(+9 files in other folders)
