[package]
name = "key"
version = "2.0.7"
edition = "2021"

[[bin]]
name = "key"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
dialoguer = "0.11"
anyhow = "1"

[features]
testing = []

[dev-dependencies]
tempfile = "3"
