[package]
name = "key"
version = "2.2.0"
edition = "2021"

[lib]
name = "key"
path = "src/lib.rs"

[[bin]]
name = "key"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
dialoguer = "0.11"
anyhow = "1"
serde_yaml = "0.9"
regex = "1"
quick-xml = "0.36"

[features]
testing = []

[dev-dependencies]
tempfile = "3"
